--- a/app/src/main/res/drawable/rounded_image.xml
+++ b/app/src/main/res/drawable/rounded_image.xml
@@ -1,9 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/backgroundColor"/>
-    <corners
-        android:bottomLeftRadius="50dp"
-        android:bottomRightRadius="50dp"
-        android:topLeftRadius="50dp"
-        android:topRightRadius="50dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <corners android:radius="75dp" />
+            <solid android:color="@color/backgroundColor" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <corners android:radius="75dp" />
+            <solid android:color="@android:color/transparent" />
+            <stroke
+                android:width="2dp"
+                android:color="@color/colorPrimary" />
+        </shape>
+    </item>
+</layer-list>
