--- a/app/src/main/res/layout/fragment_obnumber_varification.xml
+++ b/app/src/main/res/layout/fragment_obnumber_varification.xml
@@ -11,7 +11,24 @@
         android:clickable="true"
         android:focusable="true">
 
-    <TextView
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background"
+            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginBottom="20dp"
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
             android:text="Please confirm your country code and provide your phone number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -25,7 +42,7 @@
             android:layout_marginRight="40dp"
             android:layout_marginTop="?android:attr/actionBarSize"/>
 
-    <com.rilixtech.CountryCodePicker
+        <com.rilixtech.CountryCodePicker
             android:id="@+id/country_code_picker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,7 +56,7 @@
             android:gravity="center"
             android:layout_marginTop="10dp"/>
 
-    <View
+        <View
             android:id="@+id/view_1"
             android:layout_width="0dp"
             android:layout_height="1dp"
@@ -51,7 +68,7 @@
             android:layout_marginRight="24dp"
             android:layout_marginTop="10dp"/>
 
-    <EditText
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="@id/view_1"
@@ -64,7 +81,7 @@
             android:background="@null"
             android:layout_marginTop="20dp" />
 
-    <View
+        <View
             android:id="@+id/view_2"
             android:layout_width="0dp"
             android:layout_height="1dp"
@@ -76,10 +93,10 @@
             android:layout_marginRight="24dp"
             android:layout_marginTop="10dp"/>
 
-    <Button
+        <Button
             android:text="Send Code"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="62dp"
             android:id="@+id/send_code_button"
             app:layout_constraintTop_toBottomOf="@id/view_2"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -89,5 +106,15 @@
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="20dp"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/road"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@drawable/checkerd_floor"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
