--- a/app/src/main/res/layout/fragment_obpin_code.xml
+++ b/app/src/main/res/layout/fragment_obpin_code.xml
@@ -10,69 +10,99 @@
         android:clickable="true"
         android:focusable="true">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-            android:text=""
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/title_text_view"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="?android:attr/actionBarSize"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp" android:paddingTop="20dp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/backgroundColor"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <TextView
-            android:text="+1234567890"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/phone_number_text_view"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintTop_toBottomOf="@id/title_text_view"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:textStyle="bold"
-            android:textColor="#000000"/>
+        <TextView
+                android:text="Please Enter Verification Code"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_text_view"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="22dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp" android:paddingTop="20dp"/>
 
-    <com.poovam.pinedittextfield.SquarePinField
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:fieldBgColor="#ffffff"
-            app:highlightColor="#ffffff"
-            app:fieldColor="#ffffff"
-            app:noOfFields="6"
-            app:cornerRadius="2dp"
-            app:layout_constraintTop_toBottomOf="@id/phone_number_text_view"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:textSelectHandle="@drawable/text_handle"
-            android:id="@+id/pin_code_field"
-            android:layout_marginTop="40dp"
-            app:highlightEnabled="false"
-            app:highlightType="noFields"
-            app:isCursorEnabled="true"/>
+        <TextView
+                android:text="+1234567890"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/phone_number_text_view"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:layout_constraintTop_toBottomOf="@id/title_text_view"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="40dp"
+                android:textStyle="bold"
+                android:textColor="#000000"/>
 
-    <Button
-            android:text="Verify Now"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/verify_now_button"
-            app:layout_constraintTop_toBottomOf="@id/pin_code_field"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:textColor="@android:color/white"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:background="@drawable/yellow_btn"
-            android:layout_marginTop="20dp"/>
+        <com.poovam.pinedittextfield.SquarePinField
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:fieldBgColor="#ffffff"
+                app:highlightColor="#ffffff"
+                app:fieldColor="#ffffff"
+                app:noOfFields="6"
+                app:cornerRadius="2dp"
+                app:layout_constraintTop_toBottomOf="@id/phone_number_text_view"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:textSelectHandle="@drawable/text_handle"
+                android:id="@+id/pin_code_field"
+                android:layout_marginTop="20dp"
+                app:highlightEnabled="false"
+                app:highlightType="noFields"
+                app:isCursorEnabled="true"/>
+
+        <Button
+                android:text="Verify Now"
+                android:layout_width="0dp"
+                android:layout_height="62dp"
+                android:id="@+id/verify_now_button"
+                app:layout_constraintTop_toBottomOf="@id/pin_code_field"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:textColor="@android:color/white"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/yellow_btn"
+                android:layout_marginTop="20dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/road"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@drawable/checkerd_floor"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
