--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/backgroundColor"
+    android:scrollbarAlwaysDrawVerticalTrack="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,8 +19,9 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/background"
+        android:layout_height="300dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +32,7 @@
         android:layout_height="wrap_content"
         android:background="#ffff"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/road"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -30,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Full Name"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="22dp"
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
             android:textStyle="bold"
@@ -45,9 +55,9 @@
             android:lines="1"
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
+            android:layout_marginTop="20dp"
             android:paddingEnd="8dp"
             android:paddingLeft="8dp"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/edittext_drawable"
             android:inputType="text"
             android:singleLine="true" />
@@ -59,7 +69,7 @@
             android:textStyle="bold"
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:textColor="@android:color/black"
             android:textSize="18sp"/>
 
@@ -70,6 +80,7 @@
             android:lines="1"
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
+            android:layout_marginTop="20dp"
             android:paddingEnd="8dp"
             android:paddingLeft="8dp"
             android:background="@drawable/edittext_drawable"
@@ -84,7 +95,7 @@
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
             android:textStyle="bold"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:textColor="@android:color/black"
             android:textSize="18sp"/>
 
@@ -97,6 +108,7 @@
             android:layout_marginStart="35dp"
             android:paddingEnd="8dp"
             android:paddingLeft="8dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/edittext_drawable"
             android:hint="Vehicle Model"
             android:inputType="text"
@@ -109,7 +121,7 @@
             android:textStyle="bold"
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:textColor="@android:color/black"
             android:textSize="18sp"/>
 
@@ -121,7 +133,9 @@
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
             android:paddingLeft="8dp"
-            android:layout_marginBottom="8dp"
+            android:enabled="false"
+            android:clickable="false"
+            android:layout_marginTop="20dp"
             android:background="@drawable/edittext_drawable"
             android:inputType="text"
             android:singleLine="true" />
@@ -129,10 +143,10 @@
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
-            android:layout_height="42dp"
+            android:layout_height="62dp"
             android:layout_marginEnd="35dp"
             android:layout_marginStart="35dp"
-            android:layout_marginTop="-52dp"
+            android:layout_marginTop="-62dp"
             android:layout_below="@+id/spinner"
             android:entries="@array/user_type" />
 
@@ -152,4 +166,13 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/road"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@drawable/checkerd_floor"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
