--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -10,12 +10,12 @@
     <Button
         android:id="@+id/menu_butn"
         android:layout_width="32dp"
-        android:layout_height="22dp"
+        android:layout_height="26dp"
         android:layout_marginTop="25dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/menu_icon"/>
+        android:background="@drawable/menu"/>
 
     <ImageView
         android:id="@+id/imageView"
@@ -36,44 +36,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="To Share your Location, share this pin with your friends."
-            android:textStyle="bold"
-            android:textAllCaps="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:textSize="18sp"/>
-
-        <LinearLayout
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/uid_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Vehicle Number"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:textSize="28sp"/>
-
-            <Button
-                android:id="@+id/share_id"
-                android:layout_width="60dp"
-                android:layout_marginStart="8dp"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:text="Share"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp" />
-
-        </LinearLayout>
 
         <Button
             android:id="@+id/start_button"
@@ -82,7 +44,7 @@
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginBottom="22dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="22dp"
             android:background="@drawable/yellow_btn"
             android:text="start sharing location"
             android:textColor="@android:color/black"
@@ -118,7 +80,7 @@
             android:layout_height="62dp"
             android:hint="Tracking Id"
             android:lines="1"
-            android:paddingEnd="8dp"
+            android:paddingRight="8dp"
             android:paddingLeft="8dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="35dp"
