--- a/app/src/main/res/layout/share_dialog.xml
+++ b/app/src/main/res/layout/share_dialog.xml
@@ -8,58 +8,47 @@
     android:background="@drawable/dialog_background">
 
     <TextView
-        android:text="Enter Phone Number"
+        android:text="To Share your Location, share this pin with your friends."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title_text_view"
         android:layout_marginTop="10dp"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
         android:textStyle="bold"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal" />
 
-    <EditText
-        android:hint="Phone Number"
-        android:layout_width="match_parent"
-        android:layout_height="42dp" android:id="@+id/phone_edit_view"
-        android:background="@drawable/edittext_drawable"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:inputType="phone"
+    <TextView
+        android:id="@+id/uid_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Vehicle Number"
+        android:textStyle="bold"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:textColor="#000000" android:textAlignment="viewStart"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"/>
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:textSize="28sp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="0dp">
 
         <Button
             android:id="@+id/ok_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            android:text="OK"
+            android:text="Share"
             android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/cancel_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/button"
-            android:text="Cancel"
-            android:textColor="#fff"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ok_button"
-            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
