--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,28 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/action_home"
-            android:icon="@null"
-            android:title="Home"
-            />
+            android:id="@+id/home"
+            android:title="Home" />
 
         <item
-            android:icon="@null"
-            android:title="About Us"
-            />
-
-        <item
-            android:icon="@null"
-            android:title="Privacy Policy"
-            />
-
-        <item
-            android:id="@+id/action_logout"
-            android:icon="@null"
-            android:title="LogOut"
-            />
+            android:id="@+id/logout"
+            android:title="Logout" />
 
     </group>
+
 </menu>
