--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,13 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/backgroundColor"
-    android:scrollbarAlwaysDrawVerticalTrack="true">
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -19,7 +10,7 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/background"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -62,93 +53,67 @@
             android:inputType="text"
             android:singleLine="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Vehicle Registration"
-            android:textStyle="bold"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="20dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"/>
-
-        <EditText
-            android:id="@+id/vehicle_number"
-            android:layout_width="fill_parent"
-            android:layout_height="62dp"
-            android:lines="1"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="20dp"
-            android:paddingEnd="8dp"
-            android:paddingLeft="8dp"
-            android:background="@drawable/edittext_drawable"
-            android:hint="Vehicle Registration"
-            android:inputType="text"
-            android:singleLine="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Vehicle Model"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"/>
-
-        <EditText
-            android:id="@+id/vehicle_model"
-            android:layout_width="fill_parent"
-            android:layout_height="62dp"
-            android:lines="1"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:paddingEnd="8dp"
-            android:paddingLeft="8dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/edittext_drawable"
-            android:hint="Vehicle Model"
-            android:inputType="text"
-            android:singleLine="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="You Are"
-            android:textStyle="bold"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="20dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"/>
-
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="62dp"
-            android:lines="1"
-            android:paddingEnd="8dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:paddingLeft="8dp"
-            android:enabled="false"
-            android:clickable="false"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/edittext_drawable"
-            android:inputType="text"
-            android:singleLine="true" />
-
-        <Spinner
-            android:id="@+id/spinner"
+        <LinearLayout
+            android:id="@+id/service_view"
             android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="-62dp"
-            android:layout_below="@+id/spinner"
-            android:entries="@array/user_type" />
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vehicle Registration"
+                android:textStyle="bold"
+                android:layout_marginEnd="35dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="20dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"/>
+
+            <EditText
+                android:id="@+id/vehicle_number"
+                android:layout_width="fill_parent"
+                android:layout_height="62dp"
+                android:lines="1"
+                android:layout_marginEnd="35dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="20dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:background="@drawable/edittext_drawable"
+                android:hint="Vehicle Registration"
+                android:inputType="text"
+                android:singleLine="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vehicle Model"
+                android:layout_marginEnd="35dp"
+                android:layout_marginStart="35dp"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"/>
+
+            <EditText
+                android:id="@+id/vehicle_model"
+                android:layout_width="fill_parent"
+                android:layout_height="62dp"
+                android:lines="1"
+                android:layout_marginEnd="35dp"
+                android:layout_marginStart="35dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/edittext_drawable"
+                android:hint="Vehicle Model"
+                android:inputType="text"
+                android:singleLine="true" />
+
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/done_button"
@@ -174,5 +139,3 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
